syntax = "proto3";

package project_management;

option go_package = "../proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Authenticate (AuthRequest) returns (AuthResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  string role = 4;
}

message RegisterResponse {
  string token = 1;
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}
